[tool.poetry]
name = "ytdl-gui"
version = "0.1.0"
description = "GUI for downloading videos from internet using yt-dlp."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ytdl_gui"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
ttkbootstrap = "^1.10.1"
pyinstaller = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
